--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // for presentation only
-body {marging-top: 2rem;}
+// body {marging-top: 2rem;}
 
 $menu-background: #333;
 
