Important Fix on previous lesson (Flux.Dispatcher affair)

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,7 +10,7 @@
       <header>
         <h1>Comments</h1>
       </header>
-      <%= react_component("CommentList", {comments: raw( render(template: 'comments/index.json.jbuilder') )}) %>        
+      <%= react_component("CommentList") %>        
     </section>
   </section>
 </article>
