--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,8 +10,8 @@
       <header>
         <h1>Comments</h1>
       </header>
-      <%= react_component("CommentList") %>        
+      <%= react_component("CommentSection") %>
     </section>
   </section>
 </article>
-  
+
