--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,7 +1,12 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+.comment{
+  list-style-type: none;
+  margin-left: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
+}
 .comment-section{
   ul{
     list-style: none;
