--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,7 +10,8 @@
       <header>
         <h1>Comments</h1>
       </header>
-      <%= client("CommentSection", 'cs', "{restaurantId:  #{@restaurant.id}, comments: #{raw(render(template: 'comments/index.json.jbuilder'))}}") %>
+      <%= client("CommentSection", 'cs', "{restaurantId:  #{@restaurant.id},
+                        comments: #{raw(render(template: 'comments/index.json.jbuilder'))}}") %>
 
 
     </section>
