--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -10,7 +10,7 @@
       <header>
         <h1>Comments</h1>
       </header>
-      <%= client("CommentSection", 'cs', "{restaurantId:  #{@restaurant.id},
+      <%= isomorphic("CommentSection", 'cs', "{restaurantId:  #{@restaurant.id},
                         comments: #{raw(render(template: 'comments/index.json.jbuilder'))}}") %>
 
 
