Stable basic refactor (moving from comments to items)

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <section class="columns medium-6">
       <header>
-        <h1>Comments</h1>
+        <h1>Menu Items Test</h1>
       </header>
       <% if(params[:client]) %>
         <%= client("CommentSection", 'cs', "{restaurantId:  #{@restaurant.id},
@@ -21,4 +21,3 @@
     </section>
   </section>
 </article>
-
